apisix/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apisix
spec:
  hosts:
    - "apisix.k3s-jcyfb-dev.ilongyuan.cn"
  gateways:
    - "istio-system/istio-gateway"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: apisix
            port:
              number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: apisix
spec:
  host: apisix
  subsets:
    - name: v1
      labels:
        version: v1
